cluster/apps/media/lidarr/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: lidarr
  namespace: media
spec:
  parentRefs:
  - name: envoy-gateway
    namespace: networking
    sectionName: https
  hostnames:
  - "lidarr.${SECRET_CLUSTER_DOMAIN}"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: lidarr
      port: 8686
